# talk2scene

./: .gitignore  LICENSE  README.md  README_zh.md  conftest.py  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
assets/: manifest.json
conf/: config.yaml  whitelist.yaml
conf/assets/: default.yaml
conf/character/: default.yaml
conf/io/: default.yaml
conf/model/: default.yaml
conf/render/: default.yaml
conf/stream/: default.yaml
config/: character_config.yaml  composition_rules.json
docs/: assets.en.md  assets.zh.md  cli-usage.en.md  cli-usage.zh.md  configuration.en.md  configuration.zh.md  custom.css  evaluation.en.md  evaluation.zh.md  frontend.en.md  frontend.zh.md  index.en.md  index.zh.md  installation.en.md  installation.zh.md  jsonl-schema.en.md  jsonl-schema.zh.md  redis-streaming.en.md  redis-streaming.zh.md  renderer.en.md  renderer.zh.md  whitelist.en.md  whitelist.zh.md
docs/templates/: main.html
evaluation/cases/: basic_scene.json  cafe_thinking.json  cg_pandora.json
evaluation/expected/: example_video.webm
input/: sample_transcript.jsonl
talk2scene/: __init__.py  asset_gen.py  audio.py  cli.py  evaluation.py  outputs.py  performance.py  renderer.py  scene_gen.py  session.py  state_machine.py  transcription.py  whitelist.py
tests/: test_outputs.py  test_performance.py  test_session.py  test_state_machine.py  test_whitelist.py
web/: app.js  index.html  sample_events.jsonl
